--- a/modified_image_video_animation_generation.ipynb
+++ b/modified_image_video_animation_generation.ipynb
@@ -20,8 +20,8 @@
         "\n",
         "---\n",
         "## Group Members:\n",
-        "- Dilpreet kaur\n",
-        "- Mohpreet kaur\n",
+        "- Dilpreet kaur - 4358151\n",
+        "- Mohpreet kaur - 4356651\n",
         "---\n",
         "\n",
         "## Detailed Project Description:\n",
